# estruturas-de-dados

./: .gitignore  Doxyfile  Makefile
AVL-Tree/: avl_tree.cpp
AVL-Tree/include/: avl_tree.h
AVL-Tree/src/: array_list.cpp  avl_tree.cpp
AVL-Tree/tests/: AllTests.cpp
Array-List/: CMakeLists.txt  Makefile  array_list.h  cmake_install.cmake  test_array_list.cpp
Array-List/include/: array_list.h  string_list.h
Array-List/src/: array_list.cpp  string_list.cpp  string_list.h
Array-List/tests/: test_all_lists.cpp  test_array_list.cpp  test_string_list.cpp
Array-Queue/: CMakeLists.txt  Makefile  array_queue.h  cmake_install.cmake  test_array_queue.cpp
Array-Queue/include/: array_queue.h  circular_array_queue.h
Array-Queue/src/: array_queue.cpp  circular_array_queue.cpp
Array-Queue/tests/: test_all_queues.cpp  test_circular_array_queue.cpp
Array-Stack/: CMakeLists.txt  Makefile  array_stack.h  test_array_stack.cpp
Array-Stack/include/: array_stack.h
Array-Stack/src/: array_stack.cpp
Array-Stack/tests/: test_array_stack.cpp
Binary-Search-Tree/include/: binary_search_tree.h
Binary-Search-Tree/src/: array_list.cpp
Binary-Search-Tree/tests/: AllTests.cpp
Binary-Tree/include/: binary_tree.h
Binary-Tree/src/: binary_tree.cpp
Binary-Tree/tests/: AllTests.cpp
Circular-Array-Queue/: CMakeLists.txt  Makefile  circular_array_queue.h  cmake_install.cmake  test_circular_array_queue.cpp
Circular-Array-Queue/include/: circular_array_queue.h
Circular-Array-Queue/src/: circular_array_queue.cpp
Circular-Array-Queue/tests/: test_circular_array_queue.cpp
Circular-List/include/: circular_list.h
Circular-List/src/: circular_list.cpp
Circular-List/tests/: AllTests.cpp
Doubly-Circular-List/include/: doubly_circular_list.h
Doubly-Circular-List/src/: doubly_circular_list.cpp
Doubly-Circular-List/tests/: AllTests.cpp
Doubly-Linked-List/include/: doubly_linked_list.h
Doubly-Linked-List/src/: doubly_linked_list.cpp
Doubly-Linked-List/tests/: AllTests.cpp
Linked-List/: Makefile
Linked-List/include/: linked_list.h  node.h
Linked-List/src/: linked_list.cpp  node.cpp
Linked-List/tests/: AllTests.cpp
Linked-Queue/include/: linked_queue.h
Linked-Queue/src/: linked_queue.cpp
Linked-Queue/tests/: AllTests.cpp
Linked-Stack/include/: linked_stack.h
Linked-Stack/src/: linked_stack.cpp
Linked-Stack/tests/: AllTests.cpp
include/: array_queue.h  array_stack.h  circular_array_queue.h
src/: array_queue.cpp  array_stack.cpp  circular_array_queue.cpp
test/: AllTests.cpp  test_array_queue.cpp  test_array_stack.cpp  test_circular_array_queue.cpp
